Revision history for {{$dist->name}}

{{$NEXT}}

4.200005  2011-04-25 12:20:59 America/New_York

          provide actual name of releaser(s) in ConfirmRelease

          error message if "dzil run" is run without a command to run

          some minor refactoring in listdeps (Jon Rockway)

          listdeps can now skip already-met prereqs (Jesse Luehrs)

          authordeps now skips plugins under inc:: (Jesse Luehrs)

          authordeps now scans for "; authordep" comments

4.200004  2011-02-11 16:17:37 America/New_York

          Add Tests for Config::MVP 2.200 changes. ( Kent Fredric )

          MetaNoIndex, originally by J.T. Smith and Mark Gardner, is now
          included

4.200003  2011-02-06 21:37:45 America/New_York
          avoid test failures on systems where time zone can't be determined

4.200002  2011-02-04 18:02:16 America/New_York
          Test::DZil is now installed and available to other dist

4.200001  2011-01-19 21:59:18 America/New_York
          add --author to listdeps (Jesse Luehrs)

          better logging and error messages (Dave Rolsky, Jesse Luehrs)

          get abstract from main module more reliably (David Golden)

4.200000  2010-12-13 12:25:38 America/New_York
          bump version to be easier to skim, until v5

4.102346  2010-12-11 13:19:08 America/New_York
          make errors during TextTemplate rendering fatal (thanks, Dave Rolsky)

          provide MakeMaker::Runner if you want to provide your own Makefile.PL
          (thanks, Florian Ragwitz)

4.102345  2010-11-20 21:28:01 America/New_York
          add somewhat obscure missing prereq

4.102344  2010-11-19 19:34:21 America/New_York
          PruneCruft now prunes XS-related and build files:
          blib, pm_to_blib, .o, .bs, and .c files generated from .xs files

          PkgVersion now include a "TRIAL" comment for trial dists

          :InstallModules finder will now include main_modules, even if it was
          not otherwise found as a .pm in ./lib
