@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+          phase defaults to Runtime if omitted (Jonathan Yu)
+
 4.200005  2011-04-25 12:20:59 America/New_York
 
           provide actual name of releaser(s) in ConfirmRelease
